Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4658

XML exchange does not update statistics when no binding key matches routing key

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.21
    • C++ Broker
    • None

    Description

      If no binding key for a XML exchange matches the routing key of incoming message, then QMF statistics of the exchange are not updated - while msgIn, msgDrop, byteIn and byteDrop should be updated.

      Attachments

        1. xmlExchange.patch
          1 kB
          Ernest Allen

        Activity

          People

            jross Justin Ross
            eallen Ernest Allen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: