QPID-4658: Update statistics even when no binding key matches routing key

This is a patch from Pavel Moravec.  Thanks to Ernie Allen for testing
it and fixit it for latest trunk.



git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1457924 13f79535-47bb-0310-9956-ffa450edef68